.opsera-fbb11/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-fbb11-dev
  labels:
    app: fbb11
    tenant: opsera
    environment: dev
    managed-by: opsera-c2c
